@@ -1,3 +1,7 @@
+2011-06-03
+* start working on crawlers to help maintain archive of source code files that
+are needed to create knowledgebases
+
 2011-05-31
 * add support for lzo unpacking
 
